# InfinityLoopQt

./: CMakeLists.txt  Field.cpp  Field.h  README.md  defines.h  main.cpp
gui/: ControlsWidget.cpp  ControlsWidget.h  FieldCellData.cpp  FieldCellData.h  FieldCellWidget.cpp  FieldCellWidget.h  FieldLayout.cpp  FieldLayout.h  FieldWidget.cpp  FieldWidget.h  MainWindow.cpp  MainWindow.h
gui/util/: GridLayoutUtil.cpp  GridLayoutUtil.h  IconManager.cpp  IconManager.h
solver/: Solver.cpp  Solver.h
